# ChoboRunner-AI-server

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: 2-3-1.md  2-3-2.md  2-3-3.md  2-3-4.md  2-3-5.md  2-3-6.md  2-3-7.md  2-4-2.md  ci-cd-pipeline.md  docker-container.md
docs/anchors/: phase_9_split.md
scripts/: demo_trunk.py
scripts/sanity/: phase_2_2c_3_integration.py  phase_4_c_integration.py  phase_6_c_integration.py
server/: main.py  schemas.py  session.py
server/routes/: health.py  stream.py
src/choborunner_ai/: config.py  feedback_engine.py  input_validator.py  pipeline.py  pose_extractor.py  quality_gate.py  result_serializer.py  stream_pipeline.py  video_preprocessor.py
src/choborunner_ai/metrics/: __init__.py  foot_strike.py  ic_detector.py  knee_flexion.py  trunk.py  trunk_lean.py
tests/: conftest.py  test_input_validator.py  test_video_preprocessor.py
tests/fixtures/: __init__.py  synthetic_stride.py
tests/integration/: test_metrics_fsp.py  test_metrics_ic.py  test_metrics_knee.py  test_metrics_trunk.py  test_pipeline_e2e.py  test_result_serializer_from_phase5.py  test_server_health.py  test_server_session.py  test_server_ws.py  test_stream_pipeline.py
tests/unit/: test_feedback_engine.py  test_metrics_fsp.py  test_metrics_ic.py  test_metrics_knee.py  test_metrics_trunk.py  test_quality_gate.py  test_result_serializer.py
